[project]
name = "dsa-py-strivers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["black>=26.1.0"]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "ruff>=0.15.0",
]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.ruff]
target-version = "py312"
line-length = 88


[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = ["E501"] # Line too long (handled by formatter)

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
